[package]
name = "theory-frog"
version = "0.1.0"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type =["cdylib"]

[dependencies]
web-dom = "0.1"
wasm-bindgen = "0.2"
music-theory-query = "0.1.7"
